# DNA-sequences-allignment

./: CMakeLists.txt  Makefile  char_cmp.c  char_cmp.h  main.c  main.h  sequence.c  sequence.h  utils.c  utils.h
